# se_support_web

./: .gitignore  readme.md
docs/docs/: astro.config.mjs  deploy.md  package.json
docs/docs/src/content/docs/: index.md
docs/get_docs/: .gitignore
docs/get_docs/se9/: merge_rst.py
docs/save_docs/se7/: libsophon_clear.md  微服务器SE7 32-BP1产品使用手册-v1.0.3_clear.md  微服务器SE7 32-BP1产品规格书-v1.0.3_clear.md  微服务器SE7 32-EA4-23产品使用手册-v0.3.1_clear.md  微服务器SE7 32-EA4-23产品规格书-v0.1.3_clear.md  微服务器SE7 32-EP1-21产品使用手册-v1.0.2_clear.md  微服务器SE7 32-EP1-21产品规格书-v0.1.3_clear.md
docs/save_docs/se9/: 16路-微服务器SE9 16-BP1-11产品规格书_v1.5_clear.md  16路-微服务器SE9 16-BP1-18产品规格书_v1.5_clear.md  16路-微服务器SE9 16-EPC-20产品规格书_v1.5_clear.md  16路-微服务器SE9 16-EPC-A0产品规格书_v1.5_clear.md  8路-微服务器SE9 8-BP1-11  产品规格书_v1.5_clear.md  8路-微服务器SE9 8-BP1-17  产品规格书_v1.5_clear.md  8路-微服务器SE9 8-EPC-A0产品规格书_v1.5_clear.md  8路-微服务器SE9 8-EPC-B0产品规格书_v1.5_clear.md  libsophav_clear.md  libsophon_clear.md  sophgo-develop-docs_clear.md  sophon-sail_clear.md  sophon-testhub_clear.md  tpu-mlir_clear.md  算能智能微服务器SE9用户指导手册_20250512-v2.6_clear.md  算能边缘产品BSP开发参考手册FAQ_clear.md
mxbot/cinny/: config.json
mxbot/cinny/public/locales/: zh.json
mxbot/cinny/src/app/components/: LogoutDialog.tsx
mxbot/matrix_auto_connect_bot/: .env.example  Cargo.toml  readme.md
mxbot/matrix_auto_connect_bot/src/: main.rs
mxbot/matrix_faq_test_tool/: .env.example  .gitignore  Cargo.toml  README.md
mxbot/matrix_faq_test_tool/src/: app.rs  config.rs  faq_parser.rs  judge.rs  main.rs  matrix.rs  models.rs  report.rs
(+27 files in other folders)
